CTrackUAT/src/objects/Vendor_Master__c.object
<CustomObject>
    <fields>
        <fullName>City_of_Shipment__c</fullName>
        <label>City of Shipment</label>
        <picklist>
            <picklistValues>
                <fullName>WARSAW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAYNHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEUCHATEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somerville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKILLMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINCINNATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 GIBRALTAR DRIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRVINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaynabo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menlo Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brussels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAINT PRIEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIA DEL MARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEOUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETALING JAYA,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WATERLOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE LOCLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISTANBUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oberdorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERKSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 KHARTOUM ROAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mt.Wellington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH RYDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beerse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZILS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <picklist>
            <picklistValues>
                <fullName>940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1380</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1533</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1650</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1655</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1751</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2231</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2472</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2601</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2667</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2698</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <picklist>
            <picklistValues>
                <fullName>DEPUY ORTHOPAEDICS, INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>942 DEPUY SPINE INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>944 DEPUY ACE SARL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>945 CODMAN USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>974 DEPUY MITEK SARL - CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORTHO-CLINICAL DIAGNOSTICS,INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1220 ETHICON INC. U.S.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1225 DePuy Mitek. Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J CONSUMER PRODUCTS USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1510 ETHICON ENDO-SURGERY INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1520 LIFESCAN INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1520 Lifescan LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1650 CORDIS USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1655 BIOSENSE WEBSTER INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710 J&amp;J HCS USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1751 ADVANCED STERILIZATION PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORDIS GMBH GERMANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHICON ENDO-SURGERY, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995 MENTOR TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acclarent Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J GBSC Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY FRANCE S.A.S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DePuy Orthopadie Gmbh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2330 ETHICON S.P.A. ITALY (EUR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2450 JOHNSON &amp; JOHNSON MEDICAL KORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOHNSON &amp; JOHNSON SDN BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2520 J&amp;J Medical NV/SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2601 MENTOR MEDICAL SYSTEMS CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2667 DEPUY MOTION SARL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J MEDICAL TURKEY LTD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>City_of_Shipment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Vendor Master Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>